2002-05-03  Darin Adler  <darin@apple.com>

	* Resources/url_icon.tiff: Improved icon. Could be better.

2002-05-03  Darin Adler  <darin@apple.com>

	* Misc.subproj/WebKitDebug.h: Add WEBKIT_LOG_MEMUSAGE, WEBKIT_LOG_FONTCACHE, and
	WEBKIT_LOG_FONTCACHECHARMISS for font code moved here from WebCore.

	* Resources/url_icon.tiff: New URL icon?

	* WebCoreSupport.subproj/IFCachedTextRenderer.h: Added.
	* WebCoreSupport.subproj/IFCachedTextRenderer.m: Added.
	* WebCoreSupport.subproj/IFCachedTextRendererFactory.h: Added.
	* WebCoreSupport.subproj/IFCachedTextRendererFactory.m: Added.
	This has code moved here from WebCore.

	* WebKit.pbproj/project.pbxproj: Add the new source files.

	* Bookmarks.subproj/IFBookmarkLeaf.m:
	(-[IFBookmarkLeaf setURLString:]): Use copy instead of initWithString.
	* Bookmarks.subproj/IFBookmarkList.m:
	(-[IFBookmarkList initWithTitle:image:group:]): Use copy instead of stringWithString.
	(-[IFBookmarkList setTitle:]): Use copy instead of stringWithString.
	* WebView.subproj/IFWebDataSourcePrivate.mm: (-[IFWebDataSource _setTitle:]):
	Use mutableCopy instead of stringWithString.
	* WebView.subproj/IFWebView.mm: (-[IFWebView initWithFrame:]): Use copy instead
	of stringWithString.

2002-05-02  John Sullivan  <sullivan@apple.com>

	Changed API such that mutating methods can now be called on bookmark objects,
	which in turn tell their group that they have changed (so the group can send
	out notifications).

	* Bookmarks.subproj/IFBookmark.h:
	* Bookmarks.subproj/IFBookmark.m:
	(-[IFBookmark setTitle:]):
	(-[IFBookmark setImage:]):
	(-[IFBookmark setURLString:]):
	(-[IFBookmark insertChild:atIndex:]):
	(-[IFBookmark removeChild:]):
	(-[IFBookmark _parent]):
	(-[IFBookmark _group]):
	* Bookmarks.subproj/IFBookmarkGroup.h:
	* Bookmarks.subproj/IFBookmarkGroup.m:
	(-[IFBookmarkGroup _resetTopBookmark]):
	(-[IFBookmarkGroup _bookmarkDidChange:]):
	(-[IFBookmarkGroup _bookmarkChildrenDidChange:]):
	(-[IFBookmarkGroup removeBookmark:]):