@@ -1,5 +1,11 @@
 2002-05-03  Darin Adler  <darin@apple.com>
 
+	* WebCoreSupport.subproj/IFCachedTextRenderer.m: Remove some of the unused code.
+	I was going to wait and let Richard do it next week, but I was unable to control
+	my urge to hack on it.
+
+2002-05-03  Darin Adler  <darin@apple.com>
+
 	* Resources/url_icon.tiff: Improved icon. Could be better.
 
 2002-05-03  Darin Adler  <darin@apple.com>
